Correção do stream.